; ModuleID = '/home/carl/AnghaBench/redis/src/extr_acl.c_ACLGetCommandBitCoordinates.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_acl.c_ACLGetCommandBitCoordinates.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USER_COMMAND_BITS_COUNT = common dso_local global i32 0, align 4
@C_ERR = common dso_local global i32 0, align 4
@C_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ACLGetCommandBitCoordinates(i32 %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @USER_COMMAND_BITS_COUNT, align 4
  %10 = icmp sge i32 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %3
  %12 = load i32, i32* @C_ERR, align 4
  store i32 %12, i32* %4, align 4
  br label %27

13:                                               ; preds = %3
  %14 = load i32, i32* %5, align 4
  %15 = sext i32 %14 to i64
  %16 = udiv i64 %15, 4
  %17 = udiv i64 %16, 8
  %18 = trunc i64 %17 to i32
  %19 = load i32*, i32** %6, align 8
  store i32 %18, i32* %19, align 4
  %20 = load i32, i32* %5, align 4
  %21 = sext i32 %20 to i64
  %22 = urem i64 %21, 32
  %23 = shl i64 1, %22
  %24 = trunc i64 %23 to i32
  %25 = load i32*, i32** %7, align 8
  store i32 %24, i32* %25, align 4
  %26 = load i32, i32* @C_OK, align 4
  store i32 %26, i32* %4, align 4
  br label %27

27:                                               ; preds = %13, %11
  %28 = load i32, i32* %4, align 4
  ret i32 %28
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
